--- a/gb/24/2/26/n14189861.md
+++ b/gb/24/2/26/n14189861.md
@@ -1,65 +1,64 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>俄乌战争两周年 加拿大宣布援助乌克兰30亿元</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2024/02/id14189875-Ukrine-600x400.jpg" />
-<h6>2024年2月24日，在乌克兰基辅马林斯基宫，加拿大总理贾斯汀·特鲁多、意大利总理乔治娅·梅洛尼、乌克兰总统弗拉基米尔·泽连斯基、欧盟委员会主席乌苏拉·冯德莱恩、比利时首相亚历山大·德克罗在会见媒体时合影留影。乌克兰总统泽连斯基欢迎西方领导人来到基辅，纪念俄罗斯全面入侵乌克兰两周年。目前乌克兰军队弹药不足，外国援助也岌岌可危。（美联社/Efrem Lukatsky/加通社）
+<h6>2024年2月24日，在乌克兰基辅马林斯基宫，加拿大总理贾斯汀?特鲁多、意大利总理乔治娅?梅洛尼、乌克兰总统弗拉基米尔?泽连斯基、欧盟委员会主席乌尔苏拉?冯德莱恩、比利时首相亚历山大?德克罗，在会见媒体时合影。乌克兰总统泽连斯基欢迎西方领导人来到基辅，纪念俄罗斯全面入侵乌克兰两周年。目前乌克兰军队弹药不足，外国援助也岌岌可危。（美联社／Efrem Lukatsky／加通社）
 </h6>
 <hr>
-<p>【大纪元2024年02月27日讯】（大纪元记者楚方明多伦多报导）在俄罗斯入侵<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B9%8C%E5%85%8B%E5%85%B0.md#1">乌克兰</a>两周年之际，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8A%A0%E6%8B%BF%E5%A4%A7.md#1">加拿大</a>宣布向<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B9%8C%E5%85%8B%E5%85%B0.md#1">乌克兰</a>提供30.2亿元的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%8F%B4%E5%8A%A9.md#1">援助</a>，包括军事、经济和人道主义援助等。自2022年2月24日战争开始以来，加拿大对乌克兰的援助总额超过133亿元。</p>
-<h2><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%8F%B4%E5%8A%A9.md#1">援助</a>计划</h2>
-<p><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8A%A0%E6%8B%BF%E5%A4%A7.md#1">加拿大</a>最新援乌资金是加拿大与乌克兰新的安全合作协议的一部分，2024年的援助金为30.2亿元而在10年协议中，加拿大承诺援乌的总金额尚不清楚。</p>
+<p>【大纪元2024年02月27日讯】（大纪元记者楚方明多伦多报导）在俄罗斯入侵乌克兰两周年之际，加拿大宣布向乌克兰提供30.2亿元的援助，包括军事、经济和人道主义援助等。自2022年2月24日战争开始以来，加拿大对乌克兰的援助总额超过133亿元。</p>
+<h2>援助计划</h2>
+<p>加拿大最新援乌资金是加拿大与乌克兰新的安全合作协议的一部分，2024年的援助金为30.2亿元，而在10年协议中，加拿大承诺援乌的总金额尚不清楚。</p>
 <p>总理办公室2月24日发布的新闻公告说，2024年的资金将用于今年向乌克兰提供关键性的财政和军事支持，包括为乌克兰提供新的财政支持，以满足其国际收支和预算需求，并稳定其经济。这笔资金包括了加乌新协议所承诺的第一年援助资金。</p>
 <p>加拿大政府公布了一系列援乌计划中，一些价值较低援助项目的资金详情，这些项目涉及发展、人道主义、和平、安全和稳定领域的援助，占30.2亿元总额中的1.7亿元，</p>
-<h2><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%89%B9%E9%B2%81%E5%A4%9A.md#1">特鲁多</a>：坚定不移支持乌克兰</h2>
-<p>加拿大总理<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%89%B9%E9%B2%81%E5%A4%9A.md#1">特鲁多</a>于2月24日在乌克兰首都基辅宣布了向乌克兰援助30.2亿元，当时他正在与其他几位世界领导人一起访问基辅，纪念<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%BF%84%E4%B9%8C%E6%88%98%E4%BA%89.md#1">俄乌战争</a>爆发两周年。</p>
-<p>特鲁多在新闻发布会上说，“过去两年，乌克兰人坚决地捍卫民主、自由和他们的身份，加拿大会坚定不移地支持乌克兰” ，“我们将不惜代价与乌克兰站在一起，无论时间长短”。</p>
-<p>这是自2022年俄罗斯入侵乌克兰以来，特鲁多第三次访问乌克兰。陪同特鲁多访问的有加拿大副总理兼财政部长方慧兰（Chrystia Freeland）和国防部长比尔·布莱尔（Bill Blair）。</p>
-<p>2月24日，乌克兰总统泽连斯基在社交媒体上发表声明，对加拿大援助30.2亿元表示感谢，“我感谢（特鲁多总理）和所有加拿大人。从全面战争开始的第一天起，你们就站在了乌克兰一边。这对我们来说非常有价值”。</p>
+<h2>特鲁多：坚定不移支持乌克兰</h2>
+<p>加拿大总理特鲁多于2月24日在乌克兰首都基辅宣布了向乌克兰援助30.2亿元，当时他正在与其他几位世界领导人一起访问基辅，纪念俄乌战争爆发两周年。</p>
+<p>特鲁多在新闻发布会上说，“过去两年，乌克兰人坚决地捍卫民主、自由和他们的身份，加拿大会坚定不移地支持乌克兰”，“我们将不惜代价与乌克兰站在一起，无论时间长短”。</p>
+<p>这是自2022年俄罗斯入侵乌克兰以来，特鲁多第三次访问乌克兰。陪同特鲁多访问的有加拿大副总理兼财政部长方慧兰（Chrystia Freeland）和国防部长比尔?布莱尔（Bill Blair）。</p>
+<p>2月24日，乌克兰总统泽连斯基在社交媒体上发表声明，对加拿大援助30.2亿元表示感谢，他说：“我感谢（特鲁多总理）和所有加拿大人。从全面战争开始的第一天起，你们就站在了乌克兰一边。这对我们来说非常有价值。”</p>
 <h2>以前的援助</h2>
 <p>加拿大总理办公室的新闻公告显示，自2022年初以来，加拿大已承诺提供给乌克兰的援助超过133亿元。</p>
 <p>这些援助中，包括40亿元的军事援助，其中包括派往乌克兰的各种军事装备：M777榴弹炮、豹2主战坦克、装甲战斗支援车、数十万发弹药、高分辨率无人机摄像机、保暖衣、防弹衣、燃料和其它基本物资等。</p>
 <p>在133亿元中，有74亿元被分配给乌克兰作财政支持，但没有提供具体细节。</p>
-<p>此外，加拿大还承诺提供3.525亿元用于人道主义援助，包括支持紧急保健干预措施、保护服务以及住房、水、卫生设施和食品等必需品。</p>
+<p>此外，加拿大还承诺提供3.525亿元用于人道主义援助，包括支持紧急保健干预措施、保护服务，以及住房、水、卫生设施和食品等必需品。</p>
 <p>加拿大全球事务部（GAC）在2月24日的声明中指出，加拿大在过去两年中，提供了3.525亿元的人道主义援助，为乌克兰及其邻国提供了挽救生命的支持，其中大部分资金用于乌克兰南部和东部的前线社区。</p>
 <p>GAC还说，加拿大-乌克兰紧急旅行授权计划自2022年3月启动以来，已为22万多名乌克兰人提供了延长临时身份。</p>
-<p>责任编辑：文芳</p>
+<p>责任编辑：文芳#</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/19/n14184682.md#1">加中外长最近一个月第二次公开互动</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/24/n14187988.md#1">移民最多的十个富裕国家 美国居首</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/24/n14188071.md#1">4位西方领导人访问基辅 声援乌克兰抗俄</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/26/n14189429.md#1">为死于疫苗儿子讨公道 加国父亲控告政府</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/26/n14189786.md#1">加股去年现外国投资者抛售潮 加元被拖累</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/25/n14189084.md#1">廉航Lynx Air停运 受影响旅客怎么办？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/25/n14189057.md#1">外国干涉调查专员： 政府要求闭门听证</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/25/n14189063.md#1">加拿大网购增多 疑似网络欺诈案增加近40%</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/25/n14189019.md#1">账户被冻结 加国“自由车队”抗议者状告政府</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/25/n14189037.md#1">泄密事件不断 加国前高级特工称严重威胁国安</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/2/19/n14184682.md#1">加中外长最近一个月第二次公开互动</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/2/24/n14187988.md#1">移民最多的十个富裕国家 美国居首</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/2/24/n14188071.md#1">4位西方领导人访问基辅 声援乌克兰抗俄</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283854.md#1">预算办：联邦网络安全新机构五年耗资2亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283842.md#1">民调：多数加拿大人认为特鲁多不会辞职</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283778.md#1">加拿大年轻人推迟生儿育女是因为这个！</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/3/n14283073.md#1">加拿大去年录得逾八千人死于毒品 年增7%</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283258.md#1">加拿大使馆删除AI生成的国庆日帖文</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/3/n14283057.md#1">存过热隐患 加拿大召回数千台热泵</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/3/n14282981.md#1">加拿大统计局： 5月商品贸易逆差扩大至19亿</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/12/8/n12602834.md#1" target="_blank">35国逾九百政要联署 谴责中共迫害法轮功</a>  </li><li><a href="https://github.com/19920513/djy/blob/master/gb/17/10/31/n9788075.md#1" target="_blank">你不了解的邓小平：反右运动总指挥（下）</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/13/7/22/n3922934.md#1" target="_blank">佚名：乱世中原谁最美？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/13/n11255006.md#1" target="_blank">【征文】凌晓辉：贞洁论（一）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/20/n10729835.md#1" target="_blank">权威学者：侵犯宗教自由 中共被点名最多</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/19/n14184588.md#1">地外金属现身3000年前西班牙黄金宝藏</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/19/n14184085.md#1">龙的奇应：汉代玉笥山民见神迹 唐玄宗与龙几度奇遇</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/20/n14185106.md#1">认识元宵节和“元宵”七道题 你答对多少？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/19/n14184470.md#1">【未解之谜】南京风水探秘</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/20/n14184909.md#1">众里寻他千百度 元宵情诗伴花灯</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/26/n14189169.md#1">【周末大V谈】“新冷战”开打？美中全面对抗</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/25/n14188795.md#1">【中国禁闻】俞敏洪发表敏感言论 步马云后尘？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/25/n14188599.md#1">【时事军事】史上最强海空力量汇集西太平洋</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/23/n14187625.md#1">专家：去Costco买7种日用品 不买电视</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/23/n14187797.md#1">【菁英论坛】揭上市密法：包养女明星钓副国级</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/24/n14188373.md#1">7种热门副业可在家赚钱 有些时薪达100美元</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/24/n14187643.md#1">《“鬼灭之刃”绊之奇迹，迈向柱训练》影评：有效改正问题的诚意续作</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/23/n14187670.md#1">郑爽所持百万股权被续行冻结 现状令人唏嘘</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/26/n14189229.md#1">《惊奇队长》演员肯内特?米歇尔骤逝 终年49岁</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/24/n14188312.md#1">张学友上海巡演险陷假唱 中断表演获大赞</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/24/n14188368.md#1">拒签“中国台湾”承诺书？吴沐玹新戏传遭禁播</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">每日更新：小小智能守护 Apple AirTag有优惠</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/21/n14185424.md#1">活着就能存钱 5观念找到储蓄诀窍（上）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/22/n14186164.md#1">活着就能存钱 5观念找到储蓄诀窍（下）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/22/n14186918.md#1">台湾企业家患恶性肿瘤 奇迹反转令医生惊叹</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/14/n14181026.md#1">4个坏习惯很伤肾 中医：护肾长寿有3招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284473.md#1">老僧预言他将大祸临头 权倾天下的他将如何选择？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14286164.md#1">【未解之谜】最可信的穿越者 他在历史中留下了证据</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285355.md#1">奇怪的数学家（In our Prime）观影有感</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284224.md#1">《韩信》，我竟然看上了瘾</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285490.md#1">故宫耐震神技夸世 建筑秘诀藏在何处？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289641.md#1">【晚间新闻】拜登警告中共 助俄将付出代价</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289092.md#1">【新闻大家谈】王维洛：洞庭湖决堤的前因后果</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289733.md#1">【菁英论坛】全民躺平反共 熬出新中国？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/11/n14288249.md#1">市场疲软 传李嘉诚旗下东莞楼盘五折出售</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/11/n14288521.md#1">大陆失业者比比皆是 80后博主大街上痛哭</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/10/n14287995.md#1">成龙《传说》成本3.6亿 9小时票房仅61万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/10/n14287290.md#1">TWICE子瑜今夏想挑战潜水 目标深度引来笑声</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/10/n14288095.md#1">被问《长相思2》片酬谁最高 杨紫回答超搞笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/11/n14288874.md#1">胡歌首谈夫妻相处模式 大赞老婆付出很多</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/9/n14287053.md#1">《比佛利山超级警探4》登台美及全球Netflix榜首</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/11/n14288317.md#1">吃水蜜桃如何快速去果核？ 试试这个妙招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/10/n14287637.md#1">专家：随着年龄老化 你应该多吃这种食物</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/21/n14274458.md#1">锻炼“天然护膝”让行动自如</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/11/n14288470.md#1">哈佛研究：感恩让年长者活得更久</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14280514.md#1">心律失常 手脚麻木 记得检查钾含量！</a></li>
 <hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/2/26/n14189861.htm">俄乌战争两周年 加拿大宣布援助乌克兰30亿元</a></p><hr>
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/24/2/26/n14189861.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://cn.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://cn.epochtimes.com/gb/24/2/26/n14189861.htm">俄乌战争两周年 加拿大宣布援助乌克兰30亿元</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/2/26/n14189861.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
